# JX11

./: .gitignore  CMakeLists.txt  JX11.jucer  README.md
Assets/: CMakeLists.txt
Source/: CMakeLists.txt  Envelope.h  Filter.h  NoiseGenerator.h  Oscillator.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h  Preset.h  Synth.cpp  Synth.h  Voice.h
